# Password-Manager

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
extension/: com.passwordmanager.native.json  manifest.json  package-lock.json  package.json  popup.html  setup-native-host.ps1  tailwind.config.ts  vite.config.ts
extension/src/: background.ts  content.ts  popup.css  popup.tsx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: CredentialList.tsx  NotificationToaster.tsx  Sidebar.tsx  StrengthMeter.tsx
src/components/modals/: AddEditCredentialModal.tsx  CategoryModal.tsx  SaveFromExtensionModal.tsx
src/components/ui/: Button.tsx  Input.tsx  Modal.tsx  Toggle.tsx
src/crypto/: vault-crypto.ts
src/hooks/: useAutoLock.ts  useClipboard.ts
src/lib/: cn.ts  time.ts
src/pages/: GeneratorPage.tsx  SettingsPage.tsx  SetupPage.tsx  UnlockPage.tsx  VaultPage.tsx
src/services/: storage.service.ts  vault.service.ts
src/store/: vault.store.ts
src/types/: index.ts
