[package]
name = "password-manager"
version = "0.1.0"
description = "A secure local password manager"
authors = ["you"]
license = ""
repository = ""
default-run = "password-manager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is a good convention to have
name = "password_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!
custom-protocol = ["tauri/custom-protocol"]
